Adding map generation

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -155,6 +155,7 @@
     </div>
     <nav class="nav-links">
         <a href="homepage.html">Home</a>
+        <a href="disaster_events_map.html">Map</a>
         <a href="weather.html">Weather</a>
         <a href="resources.html">Resources</a>
         <a href="volunteer_list.html">Volunteers</a>
@@ -163,7 +164,6 @@
 </header>
 
 <div class="container">
-    <!-- Add Resource Section -->
     <section class="box add-resource">
         <h2>Add Your Resources</h2>
         <p>Have resources to share? Let the community know by adding your available resources.</p>
